add sweetalert2 lib, add validation contractor component, add 2 colors to global config

--- a/src/static/scss/config/_colors.scss
+++ b/src/static/scss/config/_colors.scss
@@ -12,3 +12,6 @@ $color__light: #fafafa;
 $color__dark: #212121;
 $color__white: #ffffff;
 $color__black: #000000;
+$color__red: #f44336;
+$color__green: #4caf50;
+
