--- a/src/components/Contractor/static/scss/index.scss
+++ b/src/components/Contractor/static/scss/index.scss
@@ -62,11 +62,36 @@
         }
 
         &--invalid {
-          border-color: crimson;
+          &:active,
+          &:focus {
+            border-color: $color__red;
+          }
+
+          border-color: $color__red;
         }
 
         &--valid {
-          border-color: green;
+          border-color: $color__green;
+        }
+
+        &--submit {
+          cursor: pointer;
+
+          &:hover {
+            border-color: $color__700;
+            background-color: $color__300;
+          }
+        }
+      }
+
+      .info {
+        @include rem(margin, 5, 0, 0, 0);
+        @include rem(font-size, 14);
+        display: none;
+
+        &--error {
+          display: block;
+          color: $color__red;
         }
       }
     }
