--- a/src/components/Products/static/scss/index.scss
+++ b/src/components/Products/static/scss/index.scss
@@ -12,74 +12,10 @@
   }
 
   .form {
-    display: flex;
-    flex-direction: column;
-
-    &__box {
-      @include rem(margin-bottom, 20);
-
-      &:last-child {
-        margin: 0;
-      }
-
-      .label {
-        display: block;
-        @include rem(margin-bottom, 5);
-      }
-
+    .form__box {
       .input {
-        display: block;
-        width: 100%;
-        font-size: inherit;
-        line-height: inherit;
-        @include rem(padding, 15, 10);
-        @include rem(border-radius, 5);
-        outline: none;
-        @include rem(border-width, 2);
-        border-style: solid;
-        border-color: $color__100;
-        transition: $base__transition;
-
-        &:active,
-        &:focus {
-          border-color: $color__700;
-        }
-
-        &--vat {
+        &.input--vat {
           background-color: $color__white;
-        }
-
-        &--invalid {
-          &:active,
-          &:focus {
-            border-color: $color__red;
-          }
-
-          border-color: $color__red;
-        }
-
-        &--valid {
-          border-color: $color__green;
-        }
-
-        &--submit {
-          cursor: pointer;
-
-          &:hover {
-            border-color: $color__700;
-            background-color: $color__300;
-          }
-        }
-      }
-
-      .info {
-        @include rem(margin, 5, 0, 0, 0);
-        @include rem(font-size, 14);
-        display: none;
-
-        &--error {
-          display: block;
-          color: $color__red;
         }
       }
     }
