add container to global styles

--- a/src/components/Info/static/scss/index.css
+++ b/src/components/Info/static/scss/index.css
@@ -1,1 +1,1 @@
-.info__container{border-width:.25rem;border-style:solid;border-color:#b0bec5;border-left:none;border-top:none;border-right:none;padding-bottom:1.875rem}.info .form .form__box .input.input--methodPay,.info .form .form__box .input.input--timePay{background-color:#fff}
+.info .form .form__box .input.input--methodPay,.info .form .form__box .input.input--timePay{background-color:#fff}
