--- a/src/components/Select/static/scss/index.css
+++ b/src/components/Select/static/scss/index.css
@@ -1,1 +1,1 @@
-.select__container{border-width:.25rem;border-style:solid;border-color:#b0bec5;border-left:none;border-top:none;border-right:none;padding-bottom:1.875rem}.select .form .form__box .input.input--select{background-color:#fff}
+.select .form .form__box .input.input--select{background-color:#fff}
