--- a/src/static/scss/app.css
+++ b/src/static/scss/app.css
@@ -1,1 +1,1 @@
-.app{display:flex;justify-content:center}.app .content{max-width:43.75rem;width:100%;padding:0 1.25rem;background-color:#fbfbfb}.app .content__restart{text-align:right;color:#f44336;font-size:.75rem;font-weight:700;cursor:pointer}
+.app{display:flex;justify-content:center}.app .content{max-width:43.75rem;width:100%;padding:0 1.25rem}.app .content__restart{text-align:right;color:#f44336;font-size:.75rem;font-weight:700;cursor:pointer}
